--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,9 +9,18 @@ Try to use `TSLint (vnext) - eg2.ts-tslints` when severity problem is figured ou
 
 */
 {
+    "typescript.tsdk": "node_modules/typescript/lib",
     "editor.formatOnSave": true,
     "prettier.singleQuote": true,
     "prettier.trailingComma": "all",
     "prettier.bracketSpacing": false,
-    "tslint.alwaysShowRuleFailuresAsWarnings": true
+    "tslint.alwaysShowRuleFailuresAsWarnings": true,
+    "files.exclude": {
+        "**/.git": true,
+        "**/.svn": true,
+        "**/.hg": true,
+        "**/CVS": true,
+        "**/.DS_Store": true,
+        "**/node_modules": true
+    }
 }
