--- a/package.json
+++ b/package.json
@@ -1,65 +1,84 @@
 {
   "name": "dbslate",
+  "description": "a blank slate",
   "version": "0.1.0",
   "license": "MIT",
+  "homepage": "https://dbslate.github.io/dbslate",
+  "scripts": {
+    "start": "node scripts/start.js",
+    "build": "node scripts/build.js",
+    "test": "node scripts/test.js --env=jsdom",
+    "precommit": "lint-staged",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "lint": "tslint --format stylish --project tsconfig.json --type-check",
+    "gen": "ts-node src/tasks/gen.ts"
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "tslint --format stylish --project tsconfig.json --type-check",
+      "prettier --write --single-quote --trailing-comma all --no-bracket-spacing",
+      "git add"
+    ]
+  },
   "dependencies": {
-    "@types/jest": "^20.0.1",
-    "@types/node": "^8.0.1",
-    "@types/react": "^15.0.30",
-    "@types/react-dom": "^15.5.0",
+    "@types/jest": "^20.0.2",
+    "@types/lodash": "^4.14.66",
+    "@types/node": "^8.0.3",
+    "@types/react": "^15.0.32",
+    "@types/react-dom": "^15.5.1",
+    "@types/react-redux": "^4.4.45",
+    "es6-promisify": "^5.0.0",
+    "jsonschema": "^1.1.1",
+    "lodash": "^4.17.4",
+    "monaco-editor": "^0.8.3",
     "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react-dom": "^15.6.1",
+    "react-redux": "^5.0.5",
+    "redux": "^3.7.1",
+    "strip-json-comments": "^2.0.1",
+    "ulid": "git+https://github.com/dbslate/ulid.git"
   },
   "devDependencies": {
-    "husky": "^0.13.4",
-    "lint-staged": "^4.0.0",
-    "prettier": "^1.4.4",
-    "tslint": "^5.2.0",
-    "tslint-config-strictish": "git+https://github.com/ryanatkn/tslint-config-strictish.git",
     "app-root-path": "^2.0.1",
     "autoprefixer": "7.1.0",
     "case-sensitive-paths-webpack-plugin": "2.0.0",
     "chalk": "1.1.3",
     "cli-highlight": "1.1.4",
+    "copy-webpack-plugin": "^4.0.1",
     "css-loader": "0.28.1",
     "dotenv": "4.0.0",
     "extract-text-webpack-plugin": "2.1.0",
     "file-loader": "0.11.1",
     "fs-extra": "3.0.1",
+    "gh-pages": "^1.0.0",
     "html-webpack-plugin": "2.28.0",
+    "husky": "^0.13.4",
     "jest": "20.0.3",
+    "lint-staged": "^4.0.0",
+    "normalize.css": "^7.0.0",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.0.0",
     "postcss-loader": "2.0.5",
+    "prettier": "^1.4.4",
     "promise": "7.1.1",
     "react-dev-utils": "^2.0.1",
     "react-error-overlay": "^1.0.6",
     "source-map-loader": "^0.2.1",
     "style-loader": "0.17.0",
     "sw-precache-webpack-plugin": "0.9.1",
-    "ts-loader": "^2.0.3",
+    "ts-loader": "^2.2.0",
+    "ts-node": "^3.1.0",
+    "tslint": "^5.2.0",
+    "tslint-config-strictish": "git+https://github.com/ryanatkn/tslint-config-strictish.git",
     "tslint-loader": "^3.5.3",
     "tslint-react": "^3.0.0",
-    "typescript": "^2.3.3",
+    "typescript": "^2.4.0",
     "url-loader": "0.5.8",
     "webpack": "2.6.0",
     "webpack-dev-server": "2.4.5",
     "webpack-manifest-plugin": "1.1.0",
     "whatwg-fetch": "2.0.3"
-  },
-  "scripts": {
-    "start": "node scripts/start.js",
-    "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom",
-    "precommit": "lint-staged",
-    "lint": "tslint --project tsconfig.json --type-check --fix src/*.{ts,tsx}"
-  },
-  "lint-staged": {
-    "*.{ts,tsx}": [
-      "tslint --project tsconfig.json --type-check --fix",
-      "prettier --write --single-quote --trailing-comma all --no-bracket-spacing",
-      "git add"
-    ]
   },
   "jest": {
     "collectCoverageFrom": [
