--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "module": "commonjs",
     "target": "es5",
     "lib": [
-      "es6",
+      "es2017",
       "dom"
     ],
     "sourceMap": true,
@@ -23,13 +23,16 @@
     "plugins": [
       {
         "name": "tslint-language-service",
-        "alwaysShowRuleFailuresAsWarnings": false,
-        "ignoreDefinitionFiles": true
+        "alwaysShowRuleFailuresAsWarnings": false
+        //"ignoreDefinitionFiles": true
         //"configFile": "tslint.json"
         //"disableNoUnusedVariableRule": false
       }
     ]
   },
+  "include": [
+    "src/**/*"
+  ],
   "exclude": [
     "node_modules",
     "build",
@@ -37,7 +40,8 @@
     "acceptance-tests",
     "webpack",
     "jest",
-    "src/setupTests.ts"
+    "src/setupTests.ts",
+    "config"
   ],
   "types": [
     "typePatches"
