--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,7 +21,7 @@ Try to use `TSLint (vnext) - eg2.ts-tslints` when severity problem is figured ou
         "**/.hg": true,
         "**/CVS": true,
         "**/.DS_Store": true,
-        "**/node_modules": true,
-        "**/build": true
+        "**/node_modules": true
+        //"**/build": true
     }
 }
