--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
     "redux": "^3.7.1",
+    "shelljs": "^0.7.8",
     "sockjs": "^0.3.18",
     "strip-json-comments": "^2.0.1",
     "ulid": "git+https://github.com/dbslate/ulid.git"
