--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/koa-router": "^7.0.22",
     "@types/koa-session": "^3.0.0",
     "@types/lodash": "^4.14.66",
+    "@types/mkdirp": "^0.3.29",
     "@types/node": "^8.0.3",
     "@types/react": "^15.0.32",
     "@types/react-dom": "^15.5.1",
@@ -46,6 +47,7 @@
     "koa-router": "^7.2.1",
     "koa-session": "^5.4.0",
     "lodash": "^4.17.4",
+    "mkdirp": "^0.5.1",
     "monaco-editor": "^0.8.3",
     "primus": "^7.0.2",
     "react": "^15.6.1",
