--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "deploy": "gh-pages -d build",
     "lint": "tslint --format stylish --project tsconfig.json --type-check",
     "gen": "node scripts/gen.js",
-    "build:sculpt": "node scripts/compile.js src/sculpt/src/cmd/main.ts"
+    "build-sculpt": "node scripts/compile.js src/sculpt/src/cmd/main.ts dist/sculpt.js",
+    "sculpt-webdev": "node scripts/compile.js src/sculpt/src/cmd/main.ts dist/sculpt.js"
   },
   "lint-staged": {
     "*.{ts,tsx}": [
